# arcticfreeze

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  dev_install  devcontainer.json  docker-compose.yml  license_header.txt
.github/workflows/: static_code_analysis.yaml  tests.yaml
lock/: README.md  requirements-dev.in  requirements-dev.txt  requirements.txt
scripts/: __init__.py  update_hook_revs.py  update_lock.py
scripts/script_utils/: __init__.py  cli.py  deps.py  lock_deps.py
src/arcticfreeze/: __init__.py
src/arcticfreeze/_internal/: freeze.py  frozendict.py  resolve.py  utils.py
src/arcticfreeze/_internal/_converters/: __init__.py  base.py  standard.py
src/arctictypes/: __init__.py  _freeze.py  _resolve.py
src/arctictypes/_converters/: __init__.py  base.py  standard.py
src/arctictypes/_internal/: __init__.py  freeze.py  frozendict.py  resolve.py  utils.py
src/arctictypes/_internal/_converters/: standard.py
src/artictypes/: __init__.py  _dict.py  _freeze.py
src/my_custom_app/: __main__.py
tests/: __init__.py  cases.py  test_arctic_freeze.py  test_converters.py  test_dummy.py  test_freeze.py  test_frozendict.py  test_frozendict_pydantic.py  test_standard_converters.py
tests/fixtures/: __init__.py  utils.py
