[build-system]
requires = [
    "setuptools>=67.7.2",
]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
authors = [
    { name = "KerstenBreuer", email = "kersten-breuer@outlook.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]
name = "my_custom_app"
version = "0.1.0"
description = "my_custom_app - a short description"
dependencies = [
    "typer >= 0.9.0",
    "pydantic >= 2.5.3",
    "fastapi >= 0.109.0",
    "PyYaml >= 6.0.1",
    "boto3 >= 1.34.23",
    "kafka-python >= 2.0.2",
    "aiokafka >= 0.10.0",
    "pymongo >= 4.6.1",
    "motor >= 3.3.2",
    "sqlalchemy >= 2.0.25",
    "psycopg2 >= 2.9.9",
]

[project.license]
text = "Apache 2.0"

[project.urls]
Repository = "https://github.com/kerstenbreuer/app"

[project.scripts]
my_custom_app = "my_custom_app.__main__:run"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.ruff]
exclude = [
    ".git",
    ".devcontainer",
    "__pycache__",
    "build",
    "dist",
]
ignore = [
    "E",
    "W",
    "PLW",
    "RUF001",
    "RUF010",
    "RUF012",
    "N818",
    "B008",
    "PLR2004",
    "D205",
    "D400",
    "D401",
    "D107",
    "D206",
    "D300",
]
line-length = 88
select = [
    "C90",
    "F",
    "I",
    "S",
    "B",
    "N",
    "UP",
    "PL",
    "RUF",
    "SIM",
    "D",
]
fixable = [
    "UP",
    "I",
    "D",
]
src = [
    "src",
    "tests",
    "examples",
    "scripts",
]
target-version = "py39"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"scripts/*" = [
    "PL",
    "S",
    "SIM",
    "D",
]
"tests/*" = [
    "S",
    "SIM",
    "PLR",
    "B011",
]
".devcontainer/*" = [
    "S",
    "SIM",
    "D",
]
"examples/*" = [
    "S",
    "D",
]
"__init__.py" = [
    "D",
]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.mypy]
disable_error_code = "import"
show_error_codes = true
exclude = [
    "build/lib/",
]
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_site_packages = false

[tool.pytest.ini_options]
minversion = "7.1"
asyncio_mode = "strict"

[tool.coverage.paths]
source = [
    "src",
    "/workspace/src",
    "**/lib/python*/site-packages",
]
